# LuciferOS_v2

./: README.md  check_lucifer_api.bat  check_lucifer_hud_preview.bat  pyproject.toml  start_lucifer_api.bat  start_lucifer_api_ollama.bat
config/: lucifer.json
docs/: checkpoint_api_hud_foundation.md  luciferos_execution_plan.md  luciferos_manifest.md  luciferos_phase_status.md  luciferos_transfer_summary_m140.md  luciferos_transfer_summary_milestone_91.md  memory_architecture.md  memory_candidate_selection_audit_contract.md  memory_candidate_selection_audit_delivery_design.md  memory_candidate_selection_audit_design.md  memory_candidate_selection_lifecycle_design.md  memory_command_design.md  memory_command_execution_design.md  memory_core_retrieval_design.md  memory_correction_command_grammar_design.md  memory_persistence_design.md  memory_resolver_executor_integration_design.md  memory_target_resolver_design.md  runtime_modes.md
hud/: app.js  index.html  style.css
tests/: test_milestone_100_memory_command_parser.py  test_milestone_101_memory_command_execution_design.py  test_milestone_102_pending_memory_action.py  test_milestone_103_pending_memory_action_service.py  test_milestone_104_memory_command_executor.py  test_milestone_105_memory_command_executor_confirmation.py  test_milestone_106_memory_executor_safety_regressions.py  test_milestone_107_memory_executor_docs.py  test_milestone_108_memory_target_resolver_design.py  test_milestone_109_memory_target_resolver.py  test_milestone_10_cli_interface.py  test_milestone_110_memory_target_resolver_safety.py  (+87 more)
(+61 files in other folders)
