[project]
name = 'lucifer-os'
version = '0.1.0'
description = 'Local-first modular AI agent runtime'
requires-python = '>=3.13,<3.14'
dependencies = [
    'fastapi>=0.138,<0.139',
    'uvicorn>=0.49,<0.50',
]

[dependency-groups]
dev = [
    'httpx>=0.28,<0.29',
    'pytest>=9.1,<10',
    'ruff>=0.15,<0.16',
]

[tool.pytest.ini_options]
pythonpath = ['.']
testpaths = ['tests']
